Adjust naming of Win32/64 and x86/64 words in comments and documentation
* ChangeLog: Replace i386 and X86 to x86; replace x86_64 and amd64 to
x64; replace "Win32 pthreads" to pthreads-win32; lower case win32s,
x86, x64; replace win32 to Win32; replace "MS Windows" to Windows (in
documentation and comments).
* NT_MAKEFILE: Likewise.
* README.md: Likewise.
* configure.ac: Likewise.
* cord/tests/de_win.c: Likewise.
* doc/README.macros: Likewise.
* doc/README.solaris2: Likewise.
* doc/README.win32: Likewise.
* doc/README.win64: Likewise.
* doc/debugging.md: Likewise.
* doc/leak.md: Likewise.
* doc/overview.md: Likewise.
* doc/porting.md: Likewise.
* extra/msvc_dbg.c: Likewise.
* finalize.c: Likewise.
* include/gc/cord.h: Likewise.
* include/gc/gc.h: Likewise.
* include/private/gc_priv.h: Likewise.
* include/private/gcconfig.h: Likewise.
* include/private/pthread_stop_world.h: Likewise.
* mach_dep.c: Likewise.
* mark.c: Likewise.
* mark_rts.c: Likewise.
* misc.c: Likewise.
* os_dep.c: Likewise.
* tools/threadlibs.c: Likewise.
* win32_threads.c: Likewise.
* cord/tests/de.c (WIN32): Remove misleading comment.
* misc.c (GC_enable_incremental): Change comment about win32s to TODO
item.

--- a/ChangeLog
+++ b/ChangeLog
@@ -506,7 +506,7 @@
 * Use clock_gettime() instead of clock() on Cygwin and Linux
 * Use compiler TLS on FreeBSD and NetBSD
 * Use mprotect-based VDB on PowerPC and S390 (Linux)
-* Use soft dirty bits on Linux (i386, powerpc, s390, x86_64)
+* Use soft dirty bits on Linux (x86, powerpc, s390, x64)
 * Workaround 'condition result<=0 is always false' cppcheck FP in get_maps
 * Workaround 'push_regs configured incorrectly' error (GCC-11)
 * Workaround 'same value in both branches of ternary operator' cppcheck FP
@@ -1238,7 +1238,7 @@ Also, includes 7.4.22 changes
 * Fix typo in comment in specific.h
 * Fix unbounded heap growth in case of intensive disappearing links usage
 * Remove API symbols renaming in WCC_MAKEFILE
-* Support Haiku/amd64 and Haiku/x86 hosts
+* Support Haiku/x64 and Haiku/x86 hosts
 * Support threads for DragonFly in configure
 * Workaround 'address of auto-variable returned' cppcheck error
 * Workaround gctest hang on kFreeBSD (if thread-local allocations are on)
@@ -1554,7 +1554,7 @@ Also, includes 7.4.6 changes
 * Show WoW64 warning message if running 32-bit on Win64 (enabled by macro)
 * Standalone profiling callback for threads suspend/resume
 * Support (add machine description for) TILE-Gx and TILEPro targets
-* Support build for Android 64-bit (arm64, mips64, x86_64)
+* Support build for Android 64-bit (arm64, mips64, x64)
 * Support FreeBSD/aarch64, FreeBSD/mips
 * Support iOS7 64-bit (AArch64) and iOS8+ 32/64-bit (Darwin)
 * Support MinGW build in scripts
@@ -1783,7 +1783,7 @@ Also, includes 7.2h changes
 == [7.4.4] 2016-05-25 ==
 
 * Allow GC_FAST_MALLOC_GRANS() multiple use in a function
-* Also enable the TSX workaround for i386 (Linux)
+* Also enable the TSX workaround for Linux/x86
 * Avoid unstructured procfs on Solaris
 * Change cord/de main() declaration style from K-R to ANSI C
 * Change no-argument functions declaration style to ANSI C (cord)
@@ -2382,7 +2382,7 @@ Also, includes 7.2 changes
 * Fix GC_scratch_last_end_ptr update on GC_scratch_alloc failure
 * Fix GET_MEM argument rounding in GC_scratch_alloc and similar
 * Fix PARALLEL_MARK for Windows 7+
-* Fix build (broken by fenv.h inclusion) on Linux/x86_64 under uClibc
+* Fix build (broken by fenv.h inclusion) on Linux/x64 under uClibc
 * Fix crash when using GC_malloc_many() as first allocation call
 * Fix mark stack excessive growth during parallel mark
 * Fix or remove broken URLs in documentation
@@ -2464,7 +2464,7 @@ Also, includes 7.2 changes
 * Abort in GC_thr_init on pthread_atfork failure (POSIX threads)
 * Add GC_WIN32_PTHREADS target in configure
 * Add GC_is_disabled new function to GC API
-* Add info that getcontext() resets FPE mask no longer on Linux/x86_64
+* Add info that getcontext() resets FPE mask no longer on Linux/x64
 * Add public GC_set_handle_fork to control forked child handling support
 * Add realloc_test.c test
 * Add support for Hexagon target
@@ -3659,7 +3659,7 @@ include fenv.h if defined (unless NO_GETCONTEXT or HAVE_PUSH_REGS).
 * mach_dep.c (GC_with_callee_saves_pushed): Restore FPU exception
 mask corrupted by getcontext if GETCONTEXT_FPU_EXCMASK_BUG.
 * include/private/gcconfig.h (GETCONTEXT_FPU_EXCMASK_BUG): Define
-for Linux/amd64 (since its GLibc getcontext currently has the bug).
+for Linux/x64 (since its GLibc getcontext currently has the bug).
 
 * allchblk.c (GC_use_entire_heap): Change type to int (as declared
 in gc.h); set the default value depending on new GC_USE_ENTIRE_HEAP
@@ -4055,7 +4055,7 @@ register pushing.
 * darwin_stop_world.c (GC_push_all_stacks): Set outCount to
 GC_MACH_THREAD_STATE_COUNT (instead of THREAD_STATE_MAX).
 * darwin_stop_world.c (GC_push_all_stacks): Remove FIXME and WARN
-for i386.
+for x86.
 
 * doc/README.macros (DARWIN_DONT_PARSE_STACK): Fix a typo.
 * darwin_stop_world.c (GC_use_mach_handler_thread): Change type
@@ -4066,7 +4066,7 @@ Simplify the expressions involving GC_use_mach_handler_thread.
 Initialize GC_use_mach_handler_thread to TRUE (instead of 1).
 
 * include/gc_pthread_redirects.h (GC_pthread_sigmask, GC_dlopen,
-pthread_sigmask, dlopen): Don't define for Win32 pthreads (and
+pthread_sigmask, dlopen): Don't define for pthreads-win32 (and
 don't include signal.h and dlfcn.h).
 
 * dyn_load.c (GC_register_dynlib_callback): Add FIXME.
@@ -4233,7 +4233,7 @@ is not yet).
 * win32_threads.c (GC_mark_thread_local_free_lists, GC_check_tls):
 Likewise.
 
-* NT_MAKEFILE: Remove the comment about DLL and Win32S.
+* NT_MAKEFILE: Remove the comment about DLL and win32s.
 * NT_STATIC_THREADS_MAKEFILE: Likewise.
 * NT_X64_STATIC_THREADS_MAKEFILE: Likewise.
 * NT_MAKEFILE: Add ".SUFFIXES" directive (to handle gc_cpp.cc
@@ -4428,7 +4428,7 @@ GC_enable_incremental() if MAKE_BACKGRAPH is defined, but
 do invoke it even if parallel marking is enabled.
 
 * tests/test.c (reverse_test): Comment out a check for MSWIN32
-(when determining BIG value) assuming outdated win32S.
+(when determining BIG value) assuming outdated win32s.
 * tests/test.c (reverse_test): Rename to reverse_test_inner;
 change the declaration (to be of GC_fn_type); call itself thru
 GC_call_with_gc_active() if the argument is zero.
@@ -4951,8 +4951,8 @@ with the ANSI C one.
 define it for OpenBSD.
 * include/gc_pthread_redirects.h (GC_pthread_sigmask,
 pthread_sigmask): Don't declare and redefine for OpenBSD.
-* include/private/gcconfig.h: Handle OpenBSD (on arm, sh, i386,
-amd64, powerpc).
+* include/private/gcconfig.h: Handle OpenBSD (on arm, sh, x86,
+x64, powerpc).
 * mach_dep.c (NO_GETCONTEXT): Likewise.
 * include/private/pthread_stop_world.h (thread_stop_info): Don't
 define last_stop_count field if OpenBSD.
@@ -7334,9 +7334,9 @@ prevent left shift overflow.
 * os_dep.c: change the type of GC_mem_top_down global variable
 (containing a flag) to DWORD.
 * include/gc_config_macros.h: define GC_SOLARIS_THREADS if GC_THREADS
-is defined on SunOS x86_64.
+is defined on SunOS/x64.
 * misc.c (GC_init_size_map): Ifdef out GC_ASSERT as a workaround
-for VC++ 2008 amd64 (v15.00.21022.08 for x64) compiler bug
+for VC++ 2008 x64 (v15.00.21022.08 for x64) compiler bug
 (the compiler gets hung if invoked with -Ox -D
 ALL_INTERIOR_POINTERS -D GC_ASSERTIONS)
 * backgraph.c: cast GC_gc_no value to unsigned short when
@@ -7432,7 +7432,7 @@ redundant code.
 references to deleted variable "code".  Remove redundant
 FREEBSD definitions.
 * include/private/gcconfig.h (GWW_VDB): Define for X86_64 when
-defined for X86. (STATIC): Define as "static" with NO_DEBUGGING.
+defined for x86. (STATIC): Define as "static" with NO_DEBUGGING.
 
 * include/private/gc_priv.h: Update MAX_HEAP_SECTS.
 
@@ -7510,7 +7510,7 @@ My highlights based on reading the patch:
 
 * allchblk.c: Remove GC_freehblk_ptr decl.
 Make free_list_index_of() static.
-* include/gc.h: Use __int64 on win64, define GC_oom_func,
+* include/gc.h: Use __int64 on Win64, define GC_oom_func,
 GC_finalizer_notifier_proc, GC_finalizer_notifier_proc,
 add getter and setters: GC_get_gc_no, GC_get_parallel,
 GC_set_oom_fn, GC_set_finalize_on_demand,
@@ -7838,18 +7838,18 @@ include/private/gc_priv.h, tests/test_cpp.cc:
 Replace old style function declarations.  Clean up integral types.
 Remove register declarations.  The change in malloc.c and the
 "int descr" declaration in mark.c are the most likely to have
-been real bugs outside of win64.
-* msvc_dbg.c: Disable on win64.
-* win32_threads.c: Add AMD64 support.
-* include/gc.h: no backtrace on AMD64 for now.
+been real bugs outside of Win64.
+* msvc_dbg.c: Disable on Win64.
+* win32_threads.c: Add x64 support.
+* include/gc.h: no backtrace on x64 for now.
 
 * msvc_dbg.c(GetModuleBase): Replace strcat with strcat_s.
 
-* include/gc.h: (GC_word, GC_signed_word): Fix win64 definitions.
+* include/gc.h: (GC_word, GC_signed_word): Fix Win64 definitions.
 Don't include windows.h in an extern "C" context.
-* include/private/gcconfig.h: Fix win64/X86_64 configuration.
+* include/private/gcconfig.h: Fix Win64 configuration.
 * tests/test.c: Eliminate more old style function definitions.
-Cleanup pointer and integer casts for win64.
+Cleanup pointer and integer casts for Win64.
 * tests/test_cpp.cc: Don't include gc_priv.h.
 * NT_STATIC_THREADS_MAKEFILE: Restrict suffixes for VC++ 2005.
 * NT_X64_STATIC_THREADS_MAKEFILE: New.
@@ -8306,7 +8306,7 @@ extremely unlikely circumstances.  (Thanks to Jean-Baptiste Nivois for
 some careful code inspection.)
 * Added support for kFreeBSD + glibc (thanks to Petr Salinger).
 * Fix more MacOS threads memory leaks (thanks to Allan Hsu).
-* Added initial Solaris/X86-64 support (thanks to Rainer Orth).
+* Added initial Solaris/x64 support (thanks to Rainer Orth).
 
 
 == [6.7] 2006-03-03 ==
@@ -8328,7 +8328,7 @@ to Hanno Boeck).
 David Ayers).
 * Use ld instead of nonexistent ldz instruction in Darwin FindTopOfStack
 (thanks to Andreas Tobler).
-* Add support for Darwin/X86 (thanks to Geoff Norton and the Mono
+* Add support for Darwin/x86 (thanks to Geoff Norton and the Mono
 developers).
 * Merge in some recent gcc fixes.  Add ppc64 asm code.  (Thanks to
 Bryce McKinlay and other GCJ developers.)
@@ -8444,7 +8444,7 @@ is set (thanks to Alexander Petrossian).
 Without it, s390x breaks.  (Thanks to Ulrich Weigand.)
 * Applied several MacOSX patches to support older tool chains (thanks
 to Stefan Ring).
-* Bug fix for NetBSD/amd64 (thanks to Marc Recht).
+* Bug fix for NetBSD/x64 (thanks to Marc Recht).
 * Add NetBSD/sh3 support (thanks to Uchiyama Yasushi).
 * Fixed an uninitialized variable in cordprnt.c.
 * Eliminated some, but not all, gcc -Wall warnings.
@@ -8452,7 +8452,7 @@ to Stefan Ring).
 (thanks to Dan Grayson).
 * GC_extend_size_map shouldn't adjust for GC_all_interior_pointers if
 GC_DONT_ADD_BYTE_AT_END is set.
-* Changed some (long) casts to (word) in preparation for win64 (thanks
+* Changed some (long) casts to (word) in preparation for Win64 (thanks
 to Peter Colson).
 * Changed "int stack_size" declaration in pthread_support.c to use
 size_t.  (Only mattered with GC_ASSERTIONS enabled.)
@@ -8517,8 +8517,8 @@ to Andrew Begel).
 == [6.3alpha6] 2004-05-06 ==
 
 * Define USE_GENERIC_PUSH_REGS for NetBSD/M68K.
-* Fixed the X86_64 PREFETCH macros to correctly handle ia32e (which uses
-different prefetch instructions from AMD64).  (Thanks to H.J. Lu.)
+* Fixed the x64 PREFETCH macros to correctly handle ia32e (which uses
+different prefetch instructions on x64).  (Thanks to H.J. Lu.)
 * GC_config_macros.h did not correctly define GC_WIN32_THREADS from
 GC_THREADS.
 * Added simple_example.html.
@@ -8558,7 +8558,7 @@ It probably made more sense in the gcc context.
 * Explicitly ensure that NEED_FIND_LIMIT is defined for {Open,Net}BSD/ELF.
 * Replaced USE_HPUX_TLS macro by USE_COMPILER_TLS, since gcc often
 supports the same extension on various platforms.
-* Added some basic (completely untested) defines for win64, in support
+* Added some basic (completely untested) defines for Win64, in support
 of future work.
 * Declared GC_jmp_buf in os_dep.s as JMP_BUF instead of jmp_buf, fixing
 a memory overwrite bug on Solaris and perhaps other platforms.
@@ -8745,7 +8745,7 @@ fork() call.  Thus incremental collection in the child won't work
 correctly.  (Thanks to Ben Cottrell for pointing this out.)
 - --enable-redirect-malloc is mostly untested and known not to work
 on some platforms.
-- There seem to be outstanding issues on Solaris/X86, possibly with
+- There seem to be outstanding issues on Solaris/x86, possibly with
 finding the data segment starting address.
 - Very large root set sizes (> 16 MB or so) could cause the collector
 to abort with an unexpected mark stack overflow.  (Thanks to
@@ -8818,7 +8818,7 @@ and patch.)
 * Added hand-coded structured exception handling support to mark.c.
 This should enable support of dynamic libraries under win32 with
 gcc-compiled code.  (Thanks to Ranjit Mathew for the patch.)
-Turned on dynamic library scanning for win32/gcc.
+Turned on dynamic library scanning for gcc on Win32.
 * Removed some remnants of read wrapping (thanks to Kenneth Schalk).
 GC_USE_LD_WRAP was probably broken in recent versions.
 * The build could fail on some platforms since gcconfig.h could include
@@ -8968,7 +8968,7 @@ The latter is more reliable and easier on Linux with dl_iterate_phdr.
 * Added GC_MAXIMUM_HEAP_SIZE environment variable.
 * Fix configure.in for MIPS/LINUX (thanks to H.J. Lu).
 * Double page hash table size for -DLARGE_CONFIG.
-* Integrated Bo Thorsen's X86-64 support.
+* Integrated Bo Thorsen's x64 support.
 * STACKBOTTOM definition for LINUX/MIPS was partially changed back
 (thanks to H.J. Lu and Hiroshi Kawashima for resolving this).
 * Replaced all occurrences of LINUX_DATA_START in gcconfig.h with
@@ -9073,7 +9073,7 @@ Jeffrey Mark Siskind).
 with a system header (thanks to Philip Brown).
 * Cause win32_threads.c to handle an out of range stack pointer correctly,
 though currently with a warning.  (Thanks to Jonathan Clark for
-observing that win32 applications may temporarily use the stack
+observing that Windows applications may temporarily use the stack
 pointer for other purposes, and suggesting a fix.  Unfortunately, it's
 not clear that there is a complete solution to this problem.)
 
@@ -9152,7 +9152,7 @@ collectible (gc_allocator) or GC-traceable, but not collectible
 which borrows heavily from the SGI implementation, this part of
 which was written by Matt Austern.  Changed test_cpp.cc to very
 minimally test this.
-* On Linux/X86, retry mmap with a different start argument.  That should
+* On Linux/x86, retry mmap with a different start argument.  That should
 allow the collector to use more (closer to 3GB) of the address space.
 * Force 64 bit alignment with GCJ support (reflects Bryce McKinlay's
 patch to the gcc tree).
@@ -9174,7 +9174,7 @@ Tilman Vogel; also ported for iPAQ by Oliver Kurth).
 == [6.1alpha3] 2002-02-07 ==
 
 * Minor cleanup on the gcconfig.h section for SPARC.
-* Minor fix to support Intel compiler for I386/Linux (thanks to
+* Minor fix to support Intel compiler for Linux/x86 (thanks to
 Sven Hartrumpf).
 * Added SPARC V9 (64-bit) support (thanks to Jeff Sturm).
 * Restructured the way in which we determine whether or not to keep
@@ -9390,7 +9390,7 @@ many people are likely to care, but ...)
 yet supported.  (Incremental collection should work if you have the
 right kernel.  Threads may work with a sufficiently patched pthread
 library.)
-* Changed gcconfig.h to recognize __i386__ as an alternative to i386 in
+* Changed gcconfig.h to recognize __i386__ as an alternative to x86 in
 many places (thanks to Benjamin Lerman).
 * Made win32_threads.c more tolerant of detaching a thread that it didn't
 know about (thanks to Paul Nash).
@@ -9440,7 +9440,7 @@ for pointing this out).
 * Added GC_no_dls hook for applications that want to register their own
 roots.
 * Integrated Kjetil Matheussen's Amiga changes.
-* Added FREEBSD_STACKBOTTOM.  Changed the X86/FreeBSD port to use it
+* Added FREEBSD_STACKBOTTOM.  Changed the FreeBSD/x86 port to use it
 (thanks to Matthew Flatt).
 * Added pthread_detach interception for platforms supported by linux_threads.c
 and irix_threads.c.
@@ -9559,10 +9559,10 @@ were and never will be any clients.
 * Added some code to linux_threads.c to possibly support HPUX threads
 using the Linux code.  Unfortunately, it doesn't work yet, and is
 currently disabled.
-* Added support under Linux/X86 for saving the call chain, both in (debug)
+* Added support under Linux/x86 for saving the call chain, both in (debug)
 objects for client debugging, and in GC_arrays._last_stack for GC
 debugging.  This was previously supported only under Solaris.  It is
-not enabled by default under X86, since it requires that code be compiled
+not enabled by default under x86, since it requires that code be compiled
 to explicitly gave frame pointers on the call stack.  (With gcc this
 currently happens by default, but is often turned off explicitly.)
 To turn it on, define SAVE_CALL_CHAIN.
@@ -10056,7 +10056,7 @@ supported.  The collector now defines USE_MMAP by default on Solaris.
 * Fixed MSWIN32 detection test.
 * Added Fergus Henderson's patches to allow putting the collector into
 a DLL under GNU win32.
-* Added Ivan V. Demakov's port to Watcom C on X86.
+* Added Ivan V. Demakov's port to Watcom C on x86.
 * Added Ian Piumarta's Linux/PowerPC port.
 * Added PointerFreeGC to the placement options in gc_cpp.h (suggested by
 Brian Burton).  This is of course unsafe, and may be controversial.
@@ -10287,7 +10287,7 @@ gc_cleanup is miscompiled.
 * Added Mac fixes.
 * Fixed os_dep.c to work around what appears to be
 a new and different VirtualQuery bug under newer
-versions of win32S.
+versions of win32s.
 * GC_non_gc_bytes was not correctly maintained by
 GC_free.  Fixed (thanks to James Clark).
 * Added GC_set_max_heap_size.
@@ -10453,8 +10453,8 @@ a problem.
 * Fixed a gross bug in CORD_prev.
 * Fixed a bug in blacklst.c that could result in unbounded
 heap growth during startup on machines that do not clear
-memory obtained from the OS (e.g. win32S).
-* Ported de editor to win32/win32S.  (This is now the only
+memory obtained from the OS (e.g. win32s).
+* Ported de editor to Win32 and win32s.  (This is now the only
 version with a mouse-sensitive UI.  Thanks to Rob Haack for the
 implementation based on the generic Windows application template.)
 * Added GC_malloc_ignore_off_page to allocate large arrays
@@ -10490,7 +10490,7 @@ optimizer bug.
 only by reimplementing some fraction of Solaris threads,
 since Sun doesn't currently make the thread debugging
 interface available).
-* Added non-threads win32 and win32S support.
+* Added non-threads Win32 and win32s support.
 * (Grudgingly, with suitable muttering of obscenities) renamed
 files so that the collector distribution could live on a FAT
 file system.  Files that are guaranteed to be useless on
