--- a/AUTHORS
+++ b/AUTHORS
@@ -226,6 +226,7 @@ Klemens Zwischenbrugger <ka7@la-evento.com>
 Knut Tvedten <knuttv@ifi.uio.no>
 Krister Walfridsson <cato@df.lth.se>
 Kristian Kristensen <kk@cs.aau.dk>
+Kristian Larsson <kristian@spritelink.net>
 Kumar Srikantan
 Kurt Miller <kurt@intricatesoftware.com>
 Lars Farm <lars.farm@ite.mh.se>
