Update ChangeLog file (v8.2 changes) (a cherry-pick of commit 2b342c41a from 'release-8_2')

--- a/ChangeLog
+++ b/ChangeLog
@@ -160,6 +160,34 @@
 * Workaround 'data access w/o lock' code defect FP in GC_incr_bytes_freed
 
 
+== [8.2.4] (not released yet) ==
+
+* Abort with appropriate message if first call of mmap fails with EPERM
+* Avoid potential race between realloc and GC_block_was_dirty
+* Eliminate 'GC_unmap_end declared but unused' bcc warning in disclaim_bench
+* Eliminate 'cast signed to bigger unsigned' CSA warning in WARN calls
+* Fix 'call to undeclared pthread_setname_np' errors in configure and cmake
+* Fix 'overflow in conversion from word' g++ warning in GC_init
+* Fix 'unknown option --no-undefined' linker error in cmake script (OS X)
+* Fix IRIX5 defined wrongly on FreeBSD/mips, WinCE/mips, Tandem S-Series
+* Fix data race in GC_heapsize_at_forced_unmap variable
+* Fix disabling of automatic dynamic libraries registration
+* Fix double initialization of main thread local free lists on Win32
+* Fix loop condition over dll_thread_table in GC_lookup_pthread (Win32)
+* Fix missing GC_CALLBACK for GC_waitForSingleObjectInfinite
+* Fix missing libalphagc.so dependency in Makefile.direct
+* Fix missing lock while updating GC_in_thread_creation in GC_exit_check
+* Fix missing recovery from faults in GC_mark_some on Win64 if MinGW
+* Fix missing result check of pthread_attr_getdetachstate in pthread_create
+* Fix mistyped function name in documentation of REDIRECT_REALLOC
+* Fix negative heap size values reported in WARN
+* Fix typos in comments of dll_thread_table and GC_Thread_Rep.dummy
+* Fix use of unset errno after pthread_create/sigmask calls
+* Remove false warning of missing libpthread.so on Linux
+* Remove redundant GC_ATTR_UNUSED for GC_mark_and_push
+* Replace WARN in GC_mark_some wrapper back to GC_COND_LOG_PRINTF
+
+
 == [8.2.2] 2022-08-26 ==
 
 * Abort if no progress with thread suspend/resume signals resending
