--- a/AUTHORS
+++ b/AUTHORS
@@ -170,6 +170,7 @@ George Koehler <kernigh@gmail.com>
 George Talbot <Gtalbot@ansarisbio.com>
 Gerard A Allan
 Glauco Masotti <glauco.masotti@libero.it>
+Greg Steuck <greg@nest.cx>
 Grzegorz Jakacki <jakacki@acm.org>
 Gustavo Giraldez <ggiraldez@manas.com.ar>
 Gustavo Rodriguez-Rivera <grr@cs.purdue.edu>
