Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -447,6 +447,7 @@ Walter Underwood <wunder@hp-ses.sde.hp.com>
 Wilson Ho <how@ivy.ucdavis.edu>
 Wink Saville <wink@saville.com>
 Wookey <wookey@wookware.org>
+wzx <wuzx1226@qq.com>
 Xi Wang <xi.wang@gmail.com>
 Xiaokun Zhu <xiaokun@aero.gla.ac.uk>
 Yann Dirson <dirson@debian.org>
