Update AUTHORS file (add Roger Pack)

--- a/AUTHORS
+++ b/AUTHORS
@@ -377,6 +377,7 @@ Richard Zidlicky <Richard.Zidlicky@stud.informatik.uni-erlangen.de>
 Rob Haack <rhaack@polaris.unm.edu>
 Robert Brazile <brazile@diamond.bbn.com>
 Rodrigo Kumpera <kumpera@gmail.com>
+Roger Pack <rogerpack2005@gmail.com>
 Roger Sayle <roger@eyesopen.com>
 Roland McGrath <roland@redhat.com>
 Roman Hodek <Roman.Hodek@informatik.uni-erlangen.de>
