--- a/AUTHORS
+++ b/AUTHORS
@@ -61,6 +61,7 @@ Andy Wingo <wingo@pobox.com>
 Anselm Baird-Smith <Anselm.BairdSmith@inria.fr>
 Anthony Green <green@redhat.com>
 Antoine de Maricourt
+Anuraag Agrawal <anuraaga@gmail.com>
 Ari Huttunen <Ari.Huttunen@hut.fi>
 Arrigo Triulzi <arrigo@ic.ac.uk>
 Ashley Bone <ashley.bone@nvl.army.mil>
