--- a/ChangeLog
+++ b/ChangeLog
@@ -7117,7 +7117,7 @@ parameters; return free list index bound.
 (GC_merge_unmapped): Don't access nexthdr until after null test.
 (Fixes bug in 1/29/08 check-in.)  (GC_allochblk): Calculate
 when splitting is allowable only once here, not when considering each
-block. (GC_allchblk_nth): Accept new may_split parameter.
+block. (GC_allochblk_nth): Accept new may_split parameter.
 Avoid some redundant tests for exact size matches.
 * alloc.c (GC_should_collect): Cache min_bytes_allocd.
 (GC_maybe_gc): Make locking assertion testable.
